# ines-flextool

./: README.md  flextool_input_data.sqlite  setup.cfg
ines_flextool/: ines_to_flextool.py  ines_to_flextool_entities.yaml  ines_to_flextool_entities_to_parameters.yaml  ines_to_flextool_methods.yaml  ines_to_flextool_parameters.yaml
