[metadata]
name = 
version = attr: ines_flextool.__version__
author = contributors
author_email = 
license = MIT
description = Scripts to convert ines data to FlexTool and back.
url = https://github.com/energy-modelling-workbench/ines-flextool
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    spinedb_api >= 0.8
	ines_tools >= 0.0.1
include_package_data = True
python_requires = >=3.7, <3.11

[options.packages.find]
exclude = tests*

